feat: complete website

--- a/index.html
+++ b/index.html
@@ -144,33 +144,35 @@
         </div>
     </section>
 
-    <section id="about" class="video container my-5">
-        <div class="row position-relative">
-            <div class="col-md-6">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/9bzjNiCAOLo"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="col-md-6">
-                <h1 class="text-primary mb-5">Triveni Resort</h1>
-                <p class="fs-16">
-                    Triveni Riverside Resort is a unique and luxurious resort located in Sundar Haraincha-4 Dulari.
-                    Surrounded by serene rivers and lush greenery, Triveni Riverside Resort offers a tranquil and
-                    peaceful escape from the hustle and bustle of city life.
-                    <br><br>
-                    One of the highlights of the resort is its boating facility, which allows guests to explore the
-                    picturesque river and take in the stunning views. The resort also features one-of-a-kind igloo
-                    rooms, offering guests a truly unique and memorable experience.
-                </p>
-            </div>
-            <div class="circle position-absolute">
-
+    <section id="about" class="video">
+        <div class="container my-lg-5 my-2">
+            <div class="row position-relative">
+                <div class="col-lg-6 mb-lg-0 mb-4">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/9bzjNiCAOLo"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="col-lg-6">
+                    <h1 class="text-primary mb-5">Triveni Resort</h1>
+                    <p class="fs-16">
+                        Triveni Riverside Resort is a unique and luxurious resort located in Sundar Haraincha-4 Dulari.
+                        Surrounded by serene rivers and lush greenery, Triveni Riverside Resort offers a tranquil and
+                        peaceful escape from the hustle and bustle of city life.
+                        <br><br>
+                        One of the highlights of the resort is its boating facility, which allows guests to explore the
+                        picturesque river and take in the stunning views. The resort also features one-of-a-kind igloo
+                        rooms, offering guests a truly unique and memorable experience.
+                    </p>
+                </div>
+                <div class="circle position-absolute">
+    
+                </div>
             </div>
         </div>
     </section>
 
-    <section id="room" class="rooms my-5">
+    <section id="room" class="rooms my-lg-5 my-2">
         <div class="container">
             <div class="row gap-4">
                 <div class="col-lg-5">
@@ -277,7 +279,7 @@
 
     <section id="contact" class="contact-section pb-5">
         <div class="container pt-5">
-            <h1 class="contact-section__primary-title">Let’s stay connected</h1>
+            <h1 class="header">Let’s stay connected</h1>
             <div class="contact-section__wrapper">
                 <!-- Contact Details -->
                 <div class="contact-section">
