feat: triveni resort

--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gokarna Resort</title>
+    <title>Triveni Resort</title>
 
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/nav.css">
 
     <meta name="keywords"
-        content="Gokarna Resort, Gokarna, gokarna itahari, gokarna resort bhaliya, Gokarna resort and fun park, gokarna resort fun park, resort gokarna, gokulam resort, Gokarna forest resort, gokulam resort, bhaliya">
-    <meta name="description" content=" Gokarna resort is one of the best tourist destination located in Eastern Nepal. It was
-    established in 2016 AD and from then on
-    It has become the heart of sundar haraincha.">
+        content="Triveni Resort, Triveni, Triveni itahari, Triveni resort bhaliya, Triveni resort and fun park, Triveni resort fun park, resort Triveni, Triveni resort, Triveni forest resort, Triveni resort, bhaliya, Triveni Riverside resort, riverside resort">
+    <meta name="description" content=" Triveni Riverside Resort is a unique and luxurious resort located in Sundar Haraincha-4 Dulari.
+    Surrounded by serene rivers and lush greenery, Triveni Riverside Resort offers a tranquil and
+    peaceful escape from the hustle and bustle of city life.
+    One of the highlights of the resort is its boating facility, which allows guests to explore the
+    picturesque river and take in the stunning views. The resort also features one-of-a-kind igloo
+    rooms, offering guests a truly unique and memorable experience.">
     <meta name="author" content="Shekhar Stha">
 
     <!-- Slick CSS -->
@@ -30,7 +33,6 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.asparksys.com/medias/1675533249164.png">
-    <link rel="manifest" href="/site.webmanifest">
 
     <!-- lightbox -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.css"
@@ -130,15 +132,20 @@
         </section>
 
         <div class="hero">
-            <img class="w-100 position-absolute top-0 img-fluid hero-img"
-                src="https://cdn.asparksys.com/medias/1675617419583.PNG" alt="Main Gate">
+            <!-- <img class="w-100 position-absolute top-0 img-fluid hero-img"
+                src="https://cdn.asparksys.com/medias/1675617419583.PNG" alt="Main Gate"> -->
+            <video autoplay muted class="w-100 position-absolute top-0 img-fluid hero-img">
+                <source src="https://cdn.asparksys.com/medias/1675662401739.MOV">
+            </video>
             <div class="container h-100 d-flex align-items-center">
                 <div class="d-flex flex-column align-items-center">
                     <h1 class="text-center text-white ">Enjoy your <span class="text-warning">Weekend
                         </span>with us by having fun boating, and many more..</h1>
-                    <button class="btn btn-warning">
+
+                    <a class="text-white btn btn-warning" data-bs-toggle="modal" data-bs-target="#book">
                         Book Now
-                    </button>
+                    </a>
+
                 </div>
             </div>
         </div>
@@ -166,7 +173,7 @@
                     </p>
                 </div>
                 <div class="circle position-absolute">
-    
+
                 </div>
             </div>
         </div>
@@ -177,9 +184,9 @@
             <div class="row gap-4">
                 <div class="col-lg-5">
                     <div class="room-images">
-                        <img src="https://cdn.asparksys.com/medias/1675612280847.jpg" alt="">
-                        <img src="https://cdn.asparksys.com/medias/1675612280847.jpg" alt="">
-                        <img src="https://cdn.asparksys.com/medias/1675612280847.jpg" alt="">
+                        <img src="https://cdn.asparksys.com/medias/1675612280847.jpg" alt="outer room">
+                        <img src="https://cdn.asparksys.com/medias/1675619086494.jpg" alt="table ">
+                        <img src="https://cdn.asparksys.com/medias/1675619236603.jpg" alt="bed">
                     </div>
                 </div>
 
@@ -309,7 +316,7 @@
                                                 src="https://cdn.asparksys.com/medias/1666259213353.svg" /></span>
                                         <span class="details__text">Email</span>
                                         <span class="details__address"><a
-                                                href="mailto:gokarnaresort01@gmail.com">triveniresort@gmail.com</a></span>
+                                                href="mailto:Triveniresort01@gmail.com">triveniresort@gmail.com</a></span>
                                     </div>
                                 </div>
                             </div>
@@ -317,7 +324,7 @@
                             <div class="row">
                                 <div class="map">
                                     <iframe
-                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3565.899050930613!2d87.28683121817303!3d26.65171443195431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ef6c3d37f835d3%3A0x19eac9fae6b98b6a!2sGokarna%20Restaurant%20and%20Fun%20Park!5e0!3m2!1sen!2snp!4v1670321415712!5m2!1sen!2snp"
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1817435.6624995207!2d84.58396743797618!3d27.166387344784546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ef6d6775e852af%3A0xfef9f2cd957c2346!2sTriveni%20River%20Side%20Resort%20Pvt.%20LTD.!5e0!3m2!1sen!2snp!4v1675661887162!5m2!1sen!2snp"
                                         style="border: 0" allowfullscreen="" loading="lazy"
                                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </div>
@@ -491,7 +498,9 @@
     </section>
 
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-    <div id="tiktok" class="elfsight-app-f94ce0e6-441e-4715-b0d0-4558656f7299"></div>
+    <div class="container">
+        <div id="tiktok" class="elfsight-app-f94ce0e6-441e-4715-b0d0-4558656f7299"></div>
+    </div>
 
 
 
@@ -581,13 +590,6 @@
 
 
     <!-- Scripts -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"
-        integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.js"
-        integrity="sha512-0rYcJjaqTGk43zviBim8AEjb8cjUKxwxCqo28py38JFKKBd35yPfNWmwoBLTYORC9j/COqldDc9/d1B7dhRYmg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
