feat: triveni resort

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <h1 class="text-center text-white ">Enjoy your <span class="text-warning">Weekend
                         </span>with us by having fun boating, and many more..</h1>
 
-                    <a class="text-white btn btn-warning" data-bs-toggle="modal" data-bs-target="#book">
+                    <a class="text-white btn btn-warning btn-lg fs-20" data-bs-toggle="modal" data-bs-target="#book">
                         Book Now
                     </a>
 
