--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     rooms, offering guests a truly unique and memorable experience.">
     <meta name="author" content="Shekhar Stha">
 
+    <meta name="google-site-verification" content="mqaFBMP45EERbbN4mVpW06qKu4McWHV4ndjv8uvEUD4" />
+
     <!-- Slick CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
         integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
