feat: google verification

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
             <p class="mt-5 d-flex justify-content-center">
                 More Questions?
-                <a href="./contact.html">
+                <a href="#contact">
                     <span class="text-secondary ps-1"> <u>Contact Us</u></span></a>
             </p>
         </div>
