--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="hero">
             <!-- <img class="w-100 position-absolute top-0 img-fluid hero-img"
                 src="https://cdn.asparksys.com/medias/1675617419583.PNG" alt="Main Gate"> -->
-            <video autoplay muted class="w-100 position-absolute top-0 img-fluid hero-img">
+            <video playsinline autoplay muted class="w-100 position-absolute top-0 img-fluid hero-img">
                 <source src="https://cdn.asparksys.com/medias/1675662401739.MOV">
             </video>
             <div class="container h-100 d-flex align-items-center">
@@ -144,7 +144,8 @@
                     <h1 class="text-center text-white ">Enjoy your <span class="text-warning">Weekend
                         </span>with us by having fun boating, and many more..</h1>
 
-                    <a class="text-white btn btn-warning btn-lg fs-20 px-5" data-bs-toggle="modal" data-bs-target="#book">
+                    <a class="text-white btn btn-warning btn-lg fs-20 px-5" data-bs-toggle="modal"
+                        data-bs-target="#book">
                         Book Now
                     </a>
 
@@ -286,6 +287,52 @@
         </div>
     </section>
 
+
+
+
+    <section class="team pt-5 position-relative" id="team">
+        <img class="position-absolute eclipse" src="https://cdn.asparksys.com/medias/1670252829444.svg" alt="">
+        <img class="position-absolute dotted" src="https://cdn.asparksys.com/medias/1670254655557.png" alt="">
+        <div class="container">
+            <h1 class="header">Meet Our Team Members</h1>
+            <div class="team-members">
+                <div class="member mx-4">
+                    <div class="img-div">
+                        <img class="img-fluid rounded-2" src="https://cdn.asparksys.com/medias/1670252464542.jpg"
+                            alt="rabin-dahal">
+                    </div>
+
+                    <div class="d-flex justify-content-between align-items-center gap-4">
+                        <h4>Rabin Dahal</h4>
+                        <p class="mb-0">CEO</p>
+                    </div>
+                    <a class="mt-3 text-decoration-none text-warning fs-16" href="tel:9852059336">9852059336</a>
+                </div>
+
+                <div class="member mx-4">
+                    <div class="img-div">
+                        <img class="img-fluid rounded-2" src="https://cdn.asparksys.com/medias/1675686329112.jpg"
+                            alt="">
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center gap-4">
+                        <h4>DB Khulal</h4>
+                        <p class="mb-0">Manager</p>
+                    </div>
+                    <a class="mt-3 text-decoration-none text-warning fs-16" href="tel:9813665921">9813665921</a>
+                </div>
+
+                <!-- <div class="member mx-4">
+                    <div class="img-div">
+                        <img class="img-fluid rounded-2" src="https://cdn.asparksys.com/medias/1675686730999.jpg"
+                            alt="">
+                    </div>
+                    <h4>Ramesh Acharya</h4>
+                    <p>Founder</p>
+                </div> -->
+            </div>
+        </div>
+    </section>
+
     <section id="contact" class="contact-section pb-5">
         <div class="container pt-5">
             <h1 class="header">Let’s stay connected</h1>
@@ -300,7 +347,7 @@
                                         <span class="details__icons"><img
                                                 src="https://cdn.asparksys.com/medias/1666259171836.svg" /></span>
                                         <span class="details__text">Address</span>
-                                        <span class="details__address">Sundar haraincha - 4 </span>
+                                        <span class="details__address"><a href="https://www.google.com/maps/place/J8M2%2BP3G+Triveni+River+Side+Resort+Pvt.+LTD.,+Sundar+Dulari/@26.6343027,87.3002187,17z/data=!4m9!1m2!2m1!1striveni+resort!3m5!1s0x39ef6d6775e852af:0xfef9f2cd957c2346!8m2!3d26.6343027!4d87.3002187!16s%2Fg%2F11n6fn92yj">Dulari, Sundar Haraincha Nepal</a> </span>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-sm-4 contact-section__contact-details">
@@ -308,7 +355,8 @@
                                         <span class="details__icons"><img
                                                 src="https://cdn.asparksys.com/medias/1666259197935.svg" /></span>
                                         <span class="details__text">Phone</span>
-                                        <span class="details__address"><a href="tel:9852059336">9852059336</a>
+                                        <span class="details__address"><a href="tel:9813665921">9813665921</a>, <a
+                                                href="tel:9852059336">9852059336</a>
 
                                     </div>
                                 </div>
@@ -572,7 +620,7 @@
                                     d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
                                 <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                             </svg>
-                            <span>Dulari, Sundar Haraincha Nepal</span>
+                            <span><a href="https://www.google.com/maps/place/J8M2%2BP3G+Triveni+River+Side+Resort+Pvt.+LTD.,+Sundar+Dulari/@26.6343027,87.3002187,17z/data=!4m9!1m2!2m1!1striveni+resort!3m5!1s0x39ef6d6775e852af:0xfef9f2cd957c2346!8m2!3d26.6343027!4d87.3002187!16s%2Fg%2F11n6fn92yj">Dulari, Sundar Haraincha Nepal</a></span>
                         </p>
                     </div>
                 </div>
