feat: google verification

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <!-- <img class="w-100 position-absolute top-0 img-fluid hero-img"
                 src="https://cdn.asparksys.com/medias/1675617419583.PNG" alt="Main Gate"> -->
             <video playsinline autoplay muted class="w-100 position-absolute top-0 img-fluid hero-img">
-                <source src="https://cdn.asparksys.com/medias/1675662401739.MOV">
+                <source src="https://cdn.asparksys.com/medias/1675662401739.MOV#t=2,46">
             </video>
             <div class="container h-100 d-flex align-items-center">
                 <div class="d-flex flex-column align-items-center">
@@ -292,7 +292,7 @@
 
     <section class="team pt-5 position-relative" id="team">
         <img class="position-absolute eclipse" src="https://cdn.asparksys.com/medias/1670252829444.svg" alt="">
-        <img class="position-absolute dotted" src="https://cdn.asparksys.com/medias/1670254655557.png" alt="">
+        <img class="position-absolute dotted d-sm-block d-none" src="https://cdn.asparksys.com/medias/1670254655557.png" alt="">
         <div class="container">
             <h1 class="header">Meet Our Team Members</h1>
             <div class="team-members">
